--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Diana's Programming Portfolio</title>
+        <title>About Diana McPhail</title>
     </head>
     <body>
         <h1> CSC106 Programming Project </h1>
