--- a/about.html
+++ b/about.html
@@ -5,9 +5,13 @@
         <title>About Diana McPhail</title>
     </head>
     <body>
-        <h1> CSC106 Programming Project </h1>
-This is my URI CSC106 programming project. 
-        This will continously be updated. 
+        <img src="Banner CSC 106.jpg" alt="CSC106 Programming"><br>
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_home.png?raw=true" alt="Navigation button: Home">
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_javascript.png?raw=true" alt="Navigation button: Javascript">
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_about%20me.png?raw=true" alt="Navigation button: About Me"><br>
+        <h1> About Me </h1>
+
+         <em>This is my URI CSC106 programming project. This will continously be updated.</em><br>
 
     </body>
 </html>
