--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
         <title>About Diana McPhail</title>
     </head>
     <body>
-        <img src="Banner CSC 106.jpg" alt="CSC106 Programming"><br>
-        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_home.png?raw=true" alt="Navigation button: Home">
-        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_javascript.png?raw=true" alt="Navigation button: Javascript">
-        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_about%20me.png?raw=true" alt="Navigation button: About Me"><br>
+        <img src="Banner CSC 106.jpg" alt="CSC106 Programming" width="1519" height="200"><br>
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_home.png?raw=true" alt="Navigation button: Home" width="425" height="50">
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_javascript.png?raw=true" alt="Navigation button: Javascript" width="425" height="50">
+        <img src="https://github.com/mcphaildn/mcphaildn.github.io/blob/main/Button_about%20me.png?raw=true" alt="Navigation button: About Me" width="425" height="50"><br>
         <h1> About Me </h1>
 
          <em>This is my URI CSC106 programming project. This will continously be updated.</em><br>
